# Mindtune_Viz

./: .gitignore  README.md  eda_collab.ipynb  eda_raw.ipynb  extended_model_comparison.csv  final.py  mindtune_optimized_model.ipynb  model_ready.csv  prediction.py  pyproject.toml
scripts/: benchmark_models.py  build_model_ready_engineered.py  data_collection.py  make_model_ready_csv.py  merge_eeg_with_markers.py  merge_sessions_csv.py  realtime_predict.py  train_model.py
